# slackwatch

./: CLAUDE.md  Cargo.toml
.github/workflows/: release.yaml  slackwatch.yml
docs/: configuration.md
docs/superpowers/plans/: 2026-04-25-ntfy-upgrade-design.md
docs/superpowers/specs/: 2026-04-24-ntfy-upgrade-design.md
frontend/: package-lock.json  package.json
frontend/public/: style.css
frontend/src/: types.ts
frontend/src/components/: WorkloadCard.tsx
src/: api.rs  config.rs
src/database/: client.rs
src/gitops/: gitops.rs  mod.rs
src/kubernetes/: client.rs
src/models/: mod.rs  models.rs
src/notifications/: ntfy.rs
src/repocheck/: mod.rs  repocheck.rs
src/services/: scheduler.rs  workloads.rs
src/site/: app.rs
